# greentic

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.gtc-distroless  README.md  build.rs  coverage-policy.json
.codex/: PR-03-install-prefetch-and-release-index-generation.md  PR-04-air-gapped-release-cache-export-import.md  PR-06-release-cache-airgap-tests.md  PR-07-prepared-bundle-contract-for-gtc-start.md  PR-DOCS-04-cli-wizard-and-answers.md  PR-DOCS-06-platform-capabilities.md  PR-DOCS-07-extension-and-adaptive-card-patterns.md  PR-DOCS-08-generated-schema-docs-baseline.md  PR-DOCS-09-schema-sync-tool.md  PR-DOCS-11-example-validation.md  PR-DOCS-12-troubleshooting-and-maintenance-hardening.md  PR-GTC-04-performance-remediation.md  PR-GTC-05-lightweight-perf-concurrency-testing.md  PR-GTC-07-ghcr-toolchain-manifest.md  global_rules.md  repo_overview.md
.codex/done/: PR-DOCS-01-foundation-and-source-of-truth.md  PR-DOCS-02-core-model-and-boundaries.md  PR-DOCS-03-cli-setup-and-start.md  PR-DOCS-05-flow-schema-and-step-mapping.md  PR-DOCS-10-drift-report-and-policy-enforcement.md  PR-GTC-01-wizard.md  PR-GTC-02-tools.md  PR-GTC-03-bug-remediation.md  PR-GTC-06-architecture-remediation.md
.githooks/: pre-commit
.github/workflows/: ci.yml  crates-publish.yml  dev-publish.yml  nightly-coverage.yml  perf.yml  rc-build.yml  release.yml  sync-org-readme.yml
.i18n/: translator-state.json
assets/deployer/: terraform.gtpack
assets/i18n/: ar-AE.json  ar-DZ.json  ar-EG.json  ar-IQ.json  ar-MA.json  ar-SA.json  ar-SD.json  ar-SY.json  ar-TN.json  ar.json  ay.json  bg.json  bn.json  cs.json  da.json  de.json  el.json  en-GB.json  en.json  es.json  et.json  fa.json  fi.json  fr.json  gn.json  gu.json  hi.json  hr.json  ht.json  hu.json  id.json  it.json  ja.json  km.json  kn.json  ko.json  lo.json  lt.json  lv.json  ml.json  (+26 more)
benches/: perf.rs
ci/: check_bundle_dir_mirror.sh  install-hooks.sh  local_check.sh  sync_deployer_pack.sh  sync_schema_docs.sh  validate_doc_examples.sh
crates/channel_plugin/: Cargo.toml
docs/: 00-start-here.md  TELEGRAM.md  architecture.mmd  ci.md  config.md  gtc-wizard.md  release-verification.md  repository_catalog.md  repository_catalog_en.md
docs/00-start-here/: current-terms-and-deprecations.md
docs/01-core-model/: components-flows-packs-bundles.md  extensions-overview.md
docs/02-cli/: greentic-flow.md  gtc-install.md  gtc-setup.md  gtc-start.md  gtc-telemetry.md  gtc-wizard.md
docs/03-authoring/: adaptive-card-orchestration.md  answers-json-patterns.md  extension-pack-patterns.md  flow-step-schema-mapping.md  happy-path-build-an-app.md  i18n-qa-distributor-client.md  mcp-config-secrets-oauth.md  mcp-wasm-and-adapters.md
docs/04-schemas/: README.md  drift-report.md  setup-schema.md  wizard-schema.json  wizard-schema.md
docs/04-schemas/component-schemas/: README.md  acme-widget-fixture-default.md
docs/05-examples/: demo-map.md  repo-compatibility-map.md
docs/06-troubleshooting/: common-authoring-and-runtime-issues.md
docs/99-agent-rules/: coding-agents.md
docs/examples/: README.md  wizard-launcher-bundle.answers.json  wizard-launcher-minimal.answers.json
docs/superpowers/plans/: 2026-07-06-cli-agent-types-slice1-authoring.md  2026-07-21-custom-rag-docs.md
docs/superpowers/specs/: 2026-07-06-cli-agent-types-memory-knowledge-design.md  2026-07-21-custom-rag-docs-design.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: parse_start_request.rs  parse_stop_request.rs
src/: config.rs  dist.rs  error.rs  lib.rs  perf_targets.rs  start_stop_parsing.rs
tests/: gtc_router_integration.rs  perf_scaling.rs  perf_timeout.rs
