[package]
name = "gtc"
version = "0.9.8"
edition = "2024"
rust-version = "1.91"
description = "Greentic - The operation system for digital workers"
license = "MIT"
repository = "https://github.com/greenticai/greentic"
homepage = "https://greentic.ai"
build = "build.rs"

[dependencies]
async-trait = "0.1"
clap = { version = "4.5", features = ["std"] }
directories = "6"
flate2 = "1.1"
greentic-i18n = "0.4"
greentic-distributor-client = { version = "0.4", features = ["oci-components", "pack-fetch"] }
greentic-start = "0.4"
oci-distribution = { version = "0.11", default-features = false, features = ["rustls-tls"] }
rpassword = "7.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
tempfile = "3.23"
tokio = { version = "1.48", features = ["rt"] }
zip = { version = "8", default-features = false, features = ["deflate"] }

[[bin]]
name = "gtc"
path = "src/bin/gtc.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.{ archive-format }"
bin-dir = "gtc-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"
