[package]
name = "gtc"
version = "0.9.42"
edition = "2024"
rust-version = "1.91"
description = "Greentic - The operation system for digital workers"
license = "MIT"
repository = "https://github.com/greenticai/greentic"
homepage = "https://greentic.ai"
build = "build.rs"

[dependencies]
clap = { version = "4.5", features = ["std"] }
directories = "6"
flate2 = "1.1"
greentic-distributor-client = { version = "0.4", features = ["dist-client", "oci-components"] }
greentic-i18n = "0.4"
greentic-types = "0.4"
# `oci-distribution` 0.11.0 is still the newest crates.io release available as
# of 2026-03-30, so ARCH-017 is tracked as resolved-by-verification rather than
# by a version bump from this repo.
oci-distribution = { version = "0.11", default-features = false, features = ["rustls-tls"] }
rcgen = "0.14"
rpassword = "7.4"
# `gtc` currently uses the blocking client in its CLI download/auth flows, so
# we keep the feature explicitly until those code paths move off blocking HTTP.
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_bw = "2.5"
sha2 = "0.10"
tar = "0.4"
tempfile = "3.23"
thiserror = "2.0"
tokio = { version = "1.48", features = ["rt"] }
zeroize = "1.8"
zip = { version = "8", default-features = false, features = ["deflate"] }

[dev-dependencies]
criterion = "0.5"
insta = "1.43"
proptest = "1.7"

[[bin]]
name = "gtc"
path = "src/bin/gtc.rs"

[[bench]]
name = "perf"
harness = false

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.{ archive-format }"
bin-dir = "gtc-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"
