bin = [
    { name = "gtc", path = "src/bin/gtc.rs" },
]
bench = [
    { name = "perf", harness = false },
]

[package]
name = "gtc"
version = "1.1.10"
edition = "2024"
rust-version = "1.95"
description = "Greentic - The digital workers operating system"
license = "MIT"
repository = "https://github.com/greenticai/greentic"
homepage = "https://greentic.ai"
build = "build.rs"
exclude = [
    "greentic_readme_assets/**",
    ".i18n/translator-state.json",
    ".greentic/**",
    ".codex/**",
    "myfirst.gtbundle/**",
]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.{ archive-format }"
bin-dir = "gtc-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-fmt = "zip"

[dependencies]
backhand = "0.25"
directories = "6"
flate2 = "1.1"
greentic-i18n-lib = ">=1.1.0-0, <1.2.0-0"
greentic-types = ">=1.1.0-0, <1.2.0-0"
rcgen = "0.14"
rpassword = "7.4"
serde_json = "1.0"
serde_yaml_bw = "2.5"
sha2 = "0.11"
tar = "0.4"
tempfile = "3.23"
thiserror = "2.0"
which = "8"
zeroize = "1.8"

[dependencies.clap]
version = "4.5"
features = [
    "std",
]

[dependencies.greentic-distributor-client]
version = ">=1.1.0-0, <1.2.0-0"
features = [
    "dist-client",
    "oci-components",
    "pack-fetch",
]

[dependencies.oci-distribution]
version = "0.11"
default-features = false
features = [
    "rustls-tls",
]

[dependencies.reqwest]
version = "0.13"
default-features = false
features = [
    "blocking",
    "rustls",
]

[dependencies.serde]
version = "1.0"
features = [
    "derive",
]

[dependencies.tokio]
version = "1.52"
features = [
    "rt",
]

[dependencies.zip]
version = "8"
default-features = false
features = [
    "deflate",
]

[dev-dependencies]
criterion = "0.8"
insta = "1.48"
proptest = "1.7"
